<resources>
    <string name="app_name">Score Keeper app</string>
    <string name="action_settings">Settings</string>
    <string name="team1">Team A</string>
    <string name="team2">Team B</string>
    <string name="default_score">0</string>
    <string name="reset">RESET</string>
    <string name="plus1">+1 Point</string>
    <string name="fouls">FOULS</string>
    <string name="score">SCORE</string>
</resources>
