<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.nkp.scorekeeperapp.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.7"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/team1"
                    android:textSize="@dimen/team_font_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:weightSum="2">

                        <TextView
                            android:id="@+id/txtteam1_s"
                            style="@style/Base.TextAppearance.AppCompat.Large"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:paddingTop="@dimen/activity_horizontal_margin"
                            android:text="@string/default_score"
                            android:textSize="@dimen/score_font_size" />

                        <TextView
                            style="@style/Base.TextAppearance.AppCompat.Large"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/score"
                            android:textSize="@dimen/text_font_size" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:weightSum="2">

                        <TextView
                            android:id="@+id/txtteam1_f"
                            style="@style/Base.TextAppearance.AppCompat.Large"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:paddingTop="@dimen/activity_horizontal_margin"
                            android:text="@string/default_score"
                            android:textSize="@dimen/score_font_size" />

                        <TextView
                            style="@style/Base.TextAppearance.AppCompat.Large"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/fouls"
                            android:textSize="@dimen/text_font_size" />
                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/btnteama1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/side_margin"
                    android:layout_marginRight="@dimen/side_margin"
                    android:background="@color/colorAccent"
                    android:text="@string/plus1"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnteama1foul"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/side_margin"
                    android:layout_marginRight="@dimen/side_margin"
                    android:layout_marginTop="@dimen/divider_width"
                    android:background="@color/colorAccent"
                    android:text="@string/fouls"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="@dimen/divider_width"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:background="@color/colorAccent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/team2"
                    android:textSize="@dimen/team_font_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:weightSum="2">

                        <TextView
                            android:id="@+id/txtteam2_s"
                            style="@style/Base.TextAppearance.AppCompat.Large"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:paddingTop="@dimen/activity_horizontal_margin"
                            android:text="@string/default_score"
                            android:textSize="@dimen/score_font_size" />

                        <TextView
                            style="@style/Base.TextAppearance.AppCompat.Large"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/score"
                            android:textSize="@dimen/text_font_size" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:weightSum="2">

                        <TextView
                            android:id="@+id/txtteam2_f"
                            style="@style/Base.TextAppearance.AppCompat.Large"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:paddingTop="@dimen/activity_horizontal_margin"
                            android:text="@string/default_score"
                            android:textSize="@dimen/score_font_size" />

                        <TextView
                            style="@style/Base.TextAppearance.AppCompat.Large"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/fouls"
                            android:textSize="@dimen/text_font_size" />
                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/btnteama2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/side_margin"
                    android:layout_marginRight="@dimen/side_margin"
                    android:background="@color/colorAccent"
                    android:text="@string/plus1"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnteama2foul"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/side_margin"
                    android:layout_marginRight="@dimen/side_margin"
                    android:layout_marginTop="@dimen/divider_width"
                    android:background="@color/colorAccent"
                    android:text="@string/fouls"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnreset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/reset"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>